# lp-server-oatpp

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build-and-run.sh
.github/workflows/: build-and-style.yml
migration/: init.sql
src/: App.cpp  AppComponent.hpp  ResponseMacros.hpp  UtilityMacros.hpp
src/controller/: MyController.hpp  lpController.hpp
src/db/: Database.hpp
src/dto/: DTOs.hpp
src/macro/: ResponseMacros.hpp  UtilityMacros.hpp
src/service/: testService.cpp  testService.hpp
test/: MyControllerTest.cpp  MyControllerTest.hpp  Tests.cpp  lpControllerTest.cpp  lpControllerTest.hpp
test/app/: ApiTestClient.hpp  MyApiTestClient.hpp  TestComponent.hpp
